@@ -1,1 +1,1 @@
-"2024-08-09 \\\"SOLO 45\\\""
+"2024-10-31 \\\"MAJORA\\\""
