@@ -1,3 +1,7 @@
+2024-10-31 "MAJORA"
+ * Improved DLIs to avoid continent color flickering during
+   SIO communication.
+
 2024-05-14 "DDT 411"
 (All changes by Mark Fisher <https://github.com/markjfisher>)
  * Using fujinet-lib 4.1.1 with improved debugged code :D
